SCRUM-57 email-system