@@ -1,38 +1,45 @@
 package org.dev.powermarket.service;
 
-import lombok.RequiredArgsConstructor;
 import org.dev.powermarket.domain.*;
 import org.dev.powermarket.domain.enums.NotificationType;
 import org.dev.powermarket.domain.enums.RentalRequestStatus;
 import org.dev.powermarket.domain.enums.Role;
 import org.dev.powermarket.repository.*;
-import org.dev.powermarket.security.entity.User;
-import org.dev.powermarket.security.repository.AuthorizedUserRepository;
 import org.dev.powermarket.service.dto.*;
-import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.Instant;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class RentalRequestService {
 
     private final RentalRequestRepository rentalRequestRepository;
     private final ServiceRepository serviceRepository;
-    private final AuthorizedUserRepository userRepository;
+    private final ServiceAvailabilityRepository availabilityRepository;
+    private final UserRepository userRepository;
     private final NotificationRepository notificationRepository;
-    private final EmailService emailService;
     private final RentalService rentalService;
-    private final RentalRepository rentalRepository;
-    private final ChatRepository chatRepository;
-    private final CapacityManagementService capacityManagementService;
+
+    public RentalRequestService(RentalRequestRepository rentalRequestRepository,
+                                ServiceRepository serviceRepository,
+                                ServiceAvailabilityRepository availabilityRepository,
+                                UserRepository userRepository,
+                                NotificationRepository notificationRepository,
+                                RentalService rentalService) {
+        this.rentalRequestRepository = rentalRequestRepository;
+        this.serviceRepository = serviceRepository;
+        this.availabilityRepository = availabilityRepository;
+        this.userRepository = userRepository;
+        this.notificationRepository = notificationRepository;
+        this.rentalService = rentalService;
+    }
 
     @Transactional
     public RentalRequestDto createRentalRequest(String email, CreateRentalRequestRequest request) {
@@ -50,20 +57,21 @@ public class RentalRequestService {
             throw new IllegalArgumentException("Service is not active");
         }
 
-        boolean isAvailable = capacityManagementService.isCapacityAvailable(
-                service.getId(),
-                request.getStartDate(),
-                request.getEndDate(),
-                request.getCapacityNeeded()
-        );
+        long days = request.getEndDate().toEpochDay() - request.getStartDate().toEpochDay() + 1;
+
+
+        // Check if dates are available
+        boolean isAvailable = availabilityRepository.isDateRangeAvailable(
+                service, request.getStartDate(), request.getEndDate(), days);
 
         if (!isAvailable) {
-            throw new IllegalArgumentException("Not enough capacity available for selected dates");
+            throw new IllegalArgumentException("Selected dates are not available");
         }
 
         // Calculate total price
-        long days = request.getEndDate().toEpochDay() - request.getStartDate().toEpochDay() + 1;
-        BigDecimal totalPrice = service.getPricePerDay().multiply(BigDecimal.valueOf(days));
+        BigDecimal totalPrice = service.getPricePerDay()
+                .multiply(BigDecimal.valueOf(request.getCapacityNeeded()))
+                .multiply(BigDecimal.valueOf(days));
 
         RentalRequest rentalRequest = new RentalRequest();
         rentalRequest.setService(service);
@@ -71,35 +79,10 @@ public class RentalRequestService {
         rentalRequest.setStartDate(request.getStartDate());
         rentalRequest.setEndDate(request.getEndDate());
         rentalRequest.setTotalPrice(totalPrice);
-        rentalRequest.setMessage("");
-        rentalRequest.setCapacityNeeded(request.getCapacityNeeded());
+        rentalRequest.setMessage(request.getMessage());
         rentalRequest.setStatus(RentalRequestStatus.PENDING);
 
         RentalRequest saved = rentalRequestRepository.save(rentalRequest);
-
-        // Create rental and chat (without capacity reservation - that happens on confirmation)
-        Rental rental = new Rental();
-        rental.setRentalRequest(saved);
-        rental.setService(service);
-        rental.setSupplier(service.getSupplier());
-        rental.setTenant(tenant);
-        rental.setStartDate(request.getStartDate());
-        rental.setEndDate(request.getEndDate());
-        rental.setTotalPrice(totalPrice);
-        rental.setCapacityNeeded(request.getCapacityNeeded());
-        rental.setSupplierConfirmed(false);
-        rental.setTenantConfirmed(false);
-        rental.setIsActive(true);
-
-        Rental savedRental = rentalRepository.save(rental);
-        saved.setRental(savedRental);
-
-        Chat chat = new Chat();
-        chat.setRental(savedRental);
-        Chat savedChat = chatRepository.save(chat);
-
-        savedRental.setChat(savedChat);
-        rentalRepository.save(savedRental);
 
         // Create notification for supplier
         createNotification(
@@ -133,7 +116,7 @@ public class RentalRequestService {
         }
 
         if (request.getApproved()) {
-            rentalRequest.setStatus(RentalRequestStatus.IN_CONTRACT);
+            rentalRequest.setStatus(RentalRequestStatus.APPROVED);
             rentalRequest.setRespondedAt(Instant.now());
 
             // Create rental and chat
@@ -174,40 +157,18 @@ public class RentalRequestService {
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
         if (user.getRole() == Role.TENANT) {
-            return rentalRequestRepository.findByTenant(user, Pageable.unpaged())
+            return rentalRequestRepository.findByTenant(user, org.springframework.data.domain.Pageable.unpaged())
                     .stream()
                     .map(this::toDto)
-                    .toList();
+                    .collect(Collectors.toList());
         } else if (user.getRole() == Role.SUPPLIER) {
-            return rentalRequestRepository.findBySupplier(user, Pageable.unpaged())
+            return rentalRequestRepository.findBySupplier(user, org.springframework.data.domain.Pageable.unpaged())
                     .stream()
                     .map(this::toDto)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         return List.of();
-    }
-
-    @Transactional(readOnly = true)
-    public List<RentalRequestDto> getReceivedRequests(String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
-
-        return rentalRequestRepository.findBySupplier(user, Pageable.unpaged())
-                .stream()
-                .map(this::toDto)
-                .toList();
-    }
-
-    @Transactional(readOnly = true)
-    public List<RentalRequestDto> getSentRequests(String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
-
-        return rentalRequestRepository.findByTenant(user, Pageable.unpaged())
-                .stream()
-                .map(this::toDto)
-                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -238,9 +199,6 @@ public class RentalRequestService {
         notification.setRelatedEntityId(relatedEntityId);
         notification.setIsRead(false);
         notificationRepository.save(notification);
-
-        // Отправляем e-mail с изменением статуса сделки
-        emailService.sendDealStatusEmail(user, notification);
     }
 
     private RentalRequestDto toDto(RentalRequest request) {
@@ -261,11 +219,6 @@ public class RentalRequestService {
         dto.setRejectionReason(request.getRejectionReason());
         dto.setCreatedAt(request.getCreatedAt());
         dto.setRespondedAt(request.getRespondedAt());
-        dto.setCapacityNeeded(request.getCapacityNeeded());
-        if (request.getRental() != null) {
-            dto.setRentalId(request.getRental().getId());
-        }
-
         return dto;
     }
 }
